log
Sun 16 Oct 2022 10:34:30 PM UTC: 
 heap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:10: error: ‘heapArray’ undeclared (first use in this function)
   22 |   return heapArray[0].data;
      |          ^~~~~~~~~
heap.c:22:10: note: each undeclared identifier is reported only once for each function it appears in
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a42a476
